--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -20,11 +20,16 @@
         <div class="col-md-3">
         </div>
         <div class="col-md-6" id="formParent">
-            <form action="#" th:action="@{/adduser}" th:object="${user}" method="post">
+            <form action="#" th:action="@{/addUser}" th:object="${user}" method="post">
                 <div class="form-group">
                     <label for="firstName">firstName</label>
                     <input type="text" class="form-control" th:field="*{firstName}" id="firstName" placeholder="First Name">
                     <span th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></span>
+                </div>
+                <div class="form-group">
+                    <label for="lastName">Last Name</label>
+                    <input type="text" class="form-control" th:field="*{lastName}" id="lastName" placeholder="Last Name">
+                    <span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></span>
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
