--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,16 +17,16 @@
 </head>
 <body>
 <div class="container">
-    <h1>Hello World</h1>
+<!--    <h1>Hello World</h1>
 
     <h2>This is my Thymeleaf index page.</h2>
 
     <ul>
         <li><a href="product/list">Products</a></li>
         <li><a href="customer/list">Customers</a></li>
-    </ul>
+    </ul>-->
 
-</div>
+
 
 <div th:switch="${users}">
     <h2 th:case="null">No users yet!</h2>
@@ -53,6 +53,6 @@
     </div>
     <p><a href="/signup">Add a new user</a></p>
 </div>
-
+</div>
 </body>
 </html>
